css/main.css
*, *::before, *::after {
    box-sizing: border-box;
}

#library-container {
    display: flex;
    flex-wrap: wrap;
    max-width: 920px;
    gap: 10px;
}

.card {
    display: flex;
    flex-direction: column;
    width: 200px;
    height: 140px;
    border: 2px solid lightblue;
    background-color: lightgrey;
    text-wrap: nowrap;
}

button#dialog-open {
    margin-top: 10px;
}

